--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     
+    <!-- tarjeta presentacion -->
+
+    <section class="Tarjeta">
+
+        <div class="imagen-perfil">
+
+        </div>
+
+        <div class="info">
+
+            <h1>William Kleng</h1>
+                <p>Estudiante de programacion</p>
+                    <p>Soy William Kleng, estudiante de Programación en la UTN Paraná.
+                        Apasionado por la tecnología, el desarrollo de software y los desafíos creativos.
+                        Disfruto aprender constantemente, especialmente en áreas como desarrollo web, videojuegos y sistemas optimizados.
+                        Me defino como una persona curiosa, perseverante y con ganas de crecer profesionalmente.
+                        Aspiro a construir soluciones útiles y trabajar en proyectos que generen impacto real.</p>
+
+        </div>
+
+    </section>
+
+    <footer></footer>
 </body>
 </html>
