clases para css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Presentación Personal</title>
 </head>
 <body>
@@ -11,24 +13,35 @@
 
     <section class="Tarjeta">
 
-        <div class="imagen-perfil">
+
+        <!-- imagen perfil -->
+        <div class="imagen-perfil"> 
 
         </div>
 
+        <!-- informacion -->
         <div class="info">
 
-            <h1>William Kleng</h1>
-                <p>Estudiante de programacion</p>
-                    <p>Soy William Kleng, estudiante de Programación en la UTN Paraná.
-                        Apasionado por la tecnología, el desarrollo de software y los desafíos creativos.
-                        Disfruto aprender constantemente, especialmente en áreas como desarrollo web, videojuegos y sistemas optimizados.
-                        Me defino como una persona curiosa, perseverante y con ganas de crecer profesionalmente.
-                        Aspiro a construir soluciones útiles y trabajar en proyectos que generen impacto real.</p>
+            <h1 class="nombre">William Kleng</h1>
+
+            <p class="info1">Estudiante de programacion</p>
+
+            <p class="info2">
+                Soy William Kleng, estudiante de Programación en la UTN Paraná.
+                Apasionado por la tecnología, el desarrollo de software y los desafíos creativos.
+                Disfruto aprender constantemente, especialmente en áreas como desarrollo web, videojuegos y sistemas optimizados.
+                Me defino como una persona curiosa, perseverante y con ganas de crecer profesionalmente.
+                Aspiro a construir soluciones útiles y trabajar en proyectos que generen impacto real.
+            </p>
 
         </div>
 
     </section>
 
-    <footer></footer>
+    <footer>   </footer>
 </body>
 </html>
+
+
+
+<!-- div para org contenido visual - section para agrupar contenido que tiene un tema  -->
