cambio nombre de presentacion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- informacion -->
         <div class="info">
 
-            <h1 class="nombre">William Kleng</h1>
+            <h1 class="nombre">William Vladimir Kleng</h1>
 
             <p class="info1">Estudiante de programacion</p>
 
