--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     
     <!-- tarjeta presentacion -->
 
-    <section class="Tarjeta">
+    <section class="tarjeta">
 
 
         <!-- imagen perfil -->
         <div class="imagen-perfil"> 
-
+            <img src="img/foto-perfil.jpeg" alt="Foto de perfil">
         </div>
 
         <!-- informacion -->
@@ -26,24 +26,21 @@
 
             <h1 class="nombre">William Vladimir Kleng</h1>
 
-            <p class="info1">Estudiante de programacion</p>
+            <p class="profesion ">Estudiante de programacion</p>
 
-            <p class="info2">
+            <p class="descripcion">
                 Soy William Kleng, estudiante de Programación en la UTN Paraná.
                 Apasionado por la tecnología, el desarrollo de software y los desafíos creativos.
-                Disfruto aprender constantemente, especialmente en áreas como desarrollo web, videojuegos y sistemas optimizados.
-                Me defino como una persona curiosa, perseverante y con ganas de crecer profesionalmente.
-                Aspiro a construir soluciones útiles y trabajar en proyectos que generen impacto real.
+                Me gusta aprender constantemente y crear soluciones útiles.
             </p>
 
         </div>
 
     </section>
-
-    <footer>   </footer>
 </body>
 </html>
 
 
 
 <!-- div para org contenido visual - section para agrupar contenido que tiene un tema  -->
+<!-- class en minisculas  -->
