--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">  <!-- google Fonts -->
 
-    <link rel="stylesheet" href="style.css">  <!-- conexion  css -->
+    <link rel="stylesheet" href="styles.css">  <!-- conexion  css -->
 
     <title>Presentación Personal</title>
 </head>
